# recred

./: .gitignore  Cargo.toml  README.md  config.json  data.csv  recred.json
scripts/linux/: install.sh
scripts/windows/: install.bat
src/: main.rs
src/cli/: commands.rs  handle.rs
src/config/: config_loader.rs  config_parser.rs
src/data/: data_loader.rs
src/pdf/: pdfgen.rs
src/utils/: mod.rs  output_pattern.rs  text_props.rs
