[package]
name = "autocred"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI ---------
clap = { version = "4.5", features = ["derive"] }

# Serialization ---------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV Parsing ---------
csv = "1.3"

# PDF Generation ---------
printpdf = "0.7"

# Error Handling ---------
anyhow = "1.0"

# Logging/Progress ---------
tracing = "0.1"
indicatif = "0.17"

# Parallelism ---------
rayon = "1.10"

