[package]
name = "recred"
version = "0.1.0"
edition = "2024"
authors = ["Amartya Chowdhury (aether-flux) <amartya96@proton.me>"]
description = "A Rust CLI tool for generating certificates in bulk from PDF templates using CSV data and customizable field positions, colors, and font sizes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/aether-flux/recred"
keywords = ["pdf", "certificate", "bulk-generation", "cli", "automation"]
categories = ["command-line-utilities", "file-formatting", "productivity"]
homepage = "https://github.com/aether-flux/recred"
documentation = "https://github.com/aether-flux/recred#readme"
exclude = ["tests/*", "output/*", "docs/*", "target/*", ".github", ".gitignore"]

[dependencies]
# CLI ---------
clap = { version = "4.5", features = ["derive"] }

# Serialization ---------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV Parsing ---------
csv = "1.3"

# PDF Generation ---------
lopdf = "0.38.0"

# Error Handling ---------
anyhow = "1.0"

# Logging/Progress ---------
tracing = "0.1"
indicatif = "0.17"

# Parallelism ---------
rayon = "1.10"


