[package]
name = "recred"
version = "0.1.0"
edition = "2024"
authors = ["Amartya Chowdhury (aether-flux) <amartya96@proton.me>"]
description = "A Rust CLI tool for generating certificates in bulk from PDF templates using CSV data and customizable field positions, colors, and font sizes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/aether-flux/recred"
keywords = ["pdf", "certificate", "bulk-generation", "cli", "automation"]
categories = ["command-line-utilities"]
homepage = "https://github.com/aether-flux/recred"
documentation = "https://github.com/aether-flux/recred#readme"
exclude = ["tests/*", "output/*", "docs/*", "target/*", ".github", ".gitignore"]

[dependencies]
# CLI ---------
clap = { version = "4.5", features = ["derive"] }

# Serialization ---------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV Parsing ---------
csv = "1.3"

# PDF Generation ---------
lopdf = "0.38.0"
printpdf = "0.9.1"
rusttype = "0.9.3"

# Error Handling ---------
anyhow = "1.0"

# Logging/Progress ---------
tracing = "0.1"
indicatif = { version = "0.17", features = ["rayon"] }

# Parallelism ---------
rayon = "1.10"
chrono = "0.4.44"

